job: fixed header and started on sheet (drawer) menu

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,13 +42,13 @@ import malexanderlvz from "/public/malexanderlvz-marcos-santa-cruz-web-engineer-
                   Santa Cruz, California; with his hands on his side, posing
                   infront of a parlor stove under an arc of brinks.</span
                 >
-                <div class="image-wrapper">
+              </a>
+                <div class="image-wrapper max-w-[800] w-[calc(100vw - 2rem)]">
                   <Image
                     src={malexanderlvz}
                     alt="Malexanderlvz, a proficient Software Engineer located in Santa Cruz, California; with his hands on his side, posing infront of a parlor stove under an arc of brinks."
                   />
                 </div>
-              </a>
               <div class="hero-"></div>
             </div>
             <div class="sticky-container"></div>
