--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -83,6 +83,26 @@
   position: absolute;
   width: 1px;
 }
+.logo {
+  opacity: 1;
+  transition: opacity 0.8s cubic-bezier(0.5, 0, 0, 1) 0s;
+}
+.header-scrolled {
+  transition: width 0.8s cubic-bezier(0.5, 0, 0, 1) 0s,
+    transform 0.8s cubic-bezier(0.5, 0, 0, 1) 0s;
+  width: 143px;
+  height: 0px;
+  will-change: width, transform;
+  transform: translate3d(0px, -24px, 0px);
+}
+.header {
+  position: relative;
+  z-index: 100;
+  color: var(--g-color-foreground);
+  transition: min-height 0.8s cubic-bezier(0.5, 0, 0, 1) 0s;
+  will-change: min-height;
+  min-height: calc(16.7842vw + 72px);
+}
 @layer base {
   * {
     @apply border-border;
