fix: drawer menu z-index fix. added title pre-hero just after name logo in header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import malexanderlvz from "/public/malexanderlvz-marcos-santa-cruz-web-engineer-
 ---
 
 <script is:inline>
-  const getThemePreference = () => {
+    const getThemePreference = () => {
     if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
       return localStorage.getItem("theme");
     }
@@ -29,107 +29,108 @@ import malexanderlvz from "/public/malexanderlvz-marcos-santa-cruz-web-engineer-
     });
   }
 </script>
-<Layout title="malexanderlvz">
-  <main class="">
-    <section class="hero pt-12">
-      <div class="hidden-container">
-        <div class="media-container">
-          <div class="hero-swiper">
-            <div class="hero-media-image-container">
-              <a href="https://github.com/malexanderlvz" target="_blank">
-                <span class="sr-only"
-                  >Malexanderlvz, a proficient Software Engineer located in
-                  Santa Cruz, California; with his hands on his side, posing
-                  infront of a parlor stove under an arc of brinks.</span
-                >
-              </a>
-                <div class="image-wrapper max-w-[800] w-[calc(100vw - 2rem)]">
-                  <Image
-                    src={malexanderlvz}
-                    alt="Malexanderlvz, a proficient Software Engineer located in Santa Cruz, California; with his hands on his side, posing infront of a parlor stove under an arc of brinks."
-                  />
+    <Layout title="malexanderlvz">
+    <main class="">
+        <section class="name-title"><h2 class="text-black text-center">Senior Software Engineer</h2></section>
+        <section class="hero pt-12">
+            <div class="hidden-container">
+                <div class="media-container">
+                    <div class="hero-swiper">
+                        <div class="hero-media-image-container">
+                            <a href="https://github.com/malexanderlvz" target="_blank">
+                                <span class="sr-only"
+                                    >Malexanderlvz, a proficient Software Engineer located in
+                                    Santa Cruz, California; with his hands on his side, posing
+                                    infront of a parlor stove under an arc of brinks.</span
+                                >
+                            </a>
+                                    <div class="image-wrapper max-w-[800] w-[calc(100vw - 2rem)]">
+                                        <Image
+                                        src={malexanderlvz}
+                                        alt="Malexanderlvz, a proficient Software Engineer located in Santa Cruz, California; with his hands on his side, posing infront of a parlor stove under an arc of brinks."
+                                        />
+                                    </div>
+                                    <div class="hero-"></div>
+                        </div>
+                        <div class="sticky-container"></div>
+                    </div>
+                    <div class="sticky-container">
+                        <div class="title-cta-container">
+                            <dev class="above-hint-scollbar">
+                            <h2 class="uppercase text-foreground">About Me</h2>
+                            <a
+                                href="#my-work"
+                                class="uppercase bg-background text-foreground"
+                                >
+                                My Work
+                            </a>
+                            </dev>
+                        </div>
+                    </div>
                 </div>
-              <div class="hero-"></div>
             </div>
-            <div class="sticky-container"></div>
-          </div>
-          <div class="sticky-container">
-            <div class="title-cta-container">
-              <dev class="above-hint-scollbar">
-                <h2 class="uppercase text-foreground">About Me</h2>
-                <a
-                  href="#my-work"
-                  class="uppercase bg-background text-foreground"
-                >
-                  My Work
-                </a>
-              </dev>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+        </section>
+    </main>
 
-  <style>
+<style>
     main {
-      margin: auto;
-      padding: 1rem;
-      width: 800px;
-      max-width: calc(100% - 2rem);
-      color: white;
-      font-size: 20px;
-      line-height: 1.6;
+        margin: auto;
+        padding: 1rem;
+        width: 800px;
+        max-width: calc(100% - 2rem);
+        color: white;
+        font-size: 20px;
+        line-height: 1.6;
     }
     .astro-a {
-      position: absolute;
-      top: -32px;
-      left: 50%;
-      transform: translatex(-50%);
-      width: 220px;
-      height: auto;
-      z-index: -1;
+        position: absolute;
+        top: -32px;
+        left: 50%;
+        transform: translatex(-50%);
+        width: 220px;
+        height: auto;
+        z-index: -1;
     }
     h1 {
-      font-size: 4rem;
-      font-weight: 700;
-      line-height: 1;
-      text-align: center;
-      margin-bottom: 1em;
+        font-size: 4rem;
+        font-weight: 700;
+        line-height: 1;
+        text-align: center;
+        margin-bottom: 1em;
     }
     .text-gradient {
-      background-image: var(--accent-gradient);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-size: 400%;
-      background-position: 0%;
+        background-image: var(--accent-gradient);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: 400%;
+        background-position: 0%;
     }
     .instructions {
-      margin-bottom: 2rem;
-      border: 1px solid rgba(var(--accent-light), 25%);
-      background: linear-gradient(
-        rgba(var(--accent-dark), 66%),
-        rgba(var(--accent-dark), 33%)
-      );
-      padding: 1.5rem;
-      border-radius: 8px;
+        margin-bottom: 2rem;
+        border: 1px solid rgba(var(--accent-light), 25%);
+        background: linear-gradient(
+            rgba(var(--accent-dark), 66%),
+            rgba(var(--accent-dark), 33%)
+            );
+            padding: 1.5rem;
+            border-radius: 8px;
     }
     .instructions code {
-      font-size: 0.8em;
-      font-weight: bold;
-      background: rgba(var(--accent-light), 12%);
-      color: rgb(var(--accent-light));
-      border-radius: 4px;
-      padding: 0.3em 0.4em;
+        font-size: 0.8em;
+        font-weight: bold;
+        background: rgba(var(--accent-light), 12%);
+        color: rgb(var(--accent-light));
+        border-radius: 4px;
+        padding: 0.3em 0.4em;
     }
     .instructions strong {
-      color: rgb(var(--accent-light));
+        color: rgb(var(--accent-light));
     }
     .link-card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-      gap: 2rem;
-      padding: 0;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+        gap: 2rem;
+        padding: 0;
     }
-  </style>
-</Layout>
+</style>
+    </Layout>
