feat: added expereince button

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ import { ModeToggle } from "@/components/ModeToggle";
         <div class="header relative xl:min-h-64 pb-4">
             <span aria-hidden="true"></span>
             <div
-                class="fixed-container fixed top-0 left-0 right-0 transition ease delay-0 background duration-150 bg-background"
+                class="fixed-container fixed top-0 left-0 right-0 transition ease delay-0 background duration-150 bg-background z-10"
                 >
                 <div class="header-container mx-auto my-0 max-w-7xl px-4 py-6 md:px-14">
                     <div class="header-content flex justify-end items-center h-6 relative">
