chore: unfinsished positions expereince list

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ import {GlobeIcon, LinkedinIcon, GithubIcon} from 'astro-feather'
             <div class="text-foreground">
                 <h3 id="overview" class="mt-4 mb-2 leading-tight font-semibold">OVERVIEW</h3>
                 <div class="paragraph text-lg">
-                    As a versatile full-stack developer adept in both front-end and back-end development, I am actively seeking a dynamic remote position that offers flexibility and the opportunity to tackle challenging problems within a cohesive team.
+                    I am a full-stack developer adept in both front-end and back-end development, I am actively seeking a dynamic remote position that offers flexibility and the opportunity to tackle challenging problems within a cohesive team.
                 </div>
             </div>
             <div class="hero pt-1.5">
@@ -105,6 +105,14 @@ import {GlobeIcon, LinkedinIcon, GithubIcon} from 'astro-feather'
             </div>
         </div>
         <section class="work-experience flex flex-col">
+            <div class="experience flex">
+                <div class="year">2023 - Present</div>
+                <div class="xp-position flex flex-col w-full self-center">
+                    <div class="flex flex-wrap h-full items-center">
+                        Co-Founder / Software Engineer
+                    </div>
+                    <a href="https://www.bienmiches.com" class="xp-company">https://bienmiches.com</a>
+
 
         </section>
 
