feat: added more formatting to expereinces

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ import {GlobeIcon, LinkedinIcon, GithubIcon} from 'astro-feather'
                         Co-Founder / Software Engineer
                     </div>
                     <a href="https://www.bienmiches.com" class="xp-company">https://bienmiches.com</a>
-
+                    <div class="
 
         </section>
 
