chore: configured for github pages, added GitHub Actions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -222,7 +222,7 @@ import { GlobeIcon, LinkedinIcon, GithubIcon } from "astro-feather";
         <div class="year font-bold">2015 - Present</div>
         <div class="xp-position flex flex-col w-full self-center">
           <div class="flex flex-wrap h-full items-center font-bold">
-              Principal - llavez
+              llavez
           </div>
           <a
               href="https://www.llavez.com"
