fix: fix header & layout file errors

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,7 @@ interface Props {
 }
 
 const { title } = Astro.props;
-import { User2, Menu, FileText } from "lucide-astro";
-const description =
-  "Explore the world of  through the lens of Marcos . A [Your Location]-based [Your Profession] with a passion for [Your Passion], Marcos brings creativity, expertise in [Your Core Skills], and a commitment to excellence. Dive into a portfolio showcasing innovative projects, read insights on [Your Field], and connect with Marcos for collaborative opportunities. Elevate your projects with a dedicated professional who blends technical prowess with a touch of artistic flair.";
+//import { Menu, FileText } from "lucide-astro";
 ---
 
 <!doctype html>
