--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { MenuIcon, FileTextIcon } from "astro-feather";
+import { FileTextIcon } from "astro-feather";
 import { Button } from "@/components/ui/button";
 import { Drawer } from "@/components/Drawer";
 import { ModeToggle } from "@/components/ModeToggle";
